tests/spec/emit/snapshots/go_struct_autofill_writes_omitted_named_map_field.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:net/url"
  
  struct Wrapper { values: mut url.Values }
  
  fn test() -> string {
    let mut w = Wrapper { .. }
    w.values.Add("key", "value")
    w.values.Get("key")
  }
---
package main

import "net/url"

type Wrapper struct {
	values url.Values
}

func test() string {
	w := Wrapper{values: url.Values{}}
	w.values.Add("key", "value")
	return w.values.Get("key")
}
