tests/spec/emit/snapshots/go_struct_map_field_written_through_some.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:encoding/pem"
  
  fn test() -> string {
    let mut headers = Map.new<string, string>()
    headers["key"] = "value"
    let b = pem.Block { Type: "X", Headers: Some(headers), .. }
    match b.Headers {
      Some(h) => h["key"],
      None => "",
    }
  }
---
package main

import "encoding/pem"

func test() string {
	headers := make(map[string]string)
	headers["key"] = "value"
	b := pem.Block{
		Type:    "X",
		Headers: headers,
	}
	if h := b.Headers; h != nil {
		return h["key"]
	} else {
		return ""
	}
}
