tests/spec/emit/snapshots/go_struct_named_like_a_builtin_collection_is_comparable.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:go/types"
  
  fn same(a: types.Slice, b: types.Slice, c: types.Map, d: types.Map) -> bool {
    a == b && c != d
  }
---
package main

import "go/types"

func same(a, b types.Slice, c, d types.Map) bool {
	return a == b && c != d
}
