tests/spec/emit/snapshots/go_tuple_partial_fn_value_adapts_to_lowered_slot.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:mime"
  
  fn use_fn(f: fn(string) -> Partial<(string, Map<string, string>), error>) {
    let _ = f("text/plain")
  }
  
  fn main() {
    use_fn(mime.ParseMediaType)
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"mime"
)

func useFn(f func(string) (lisette.Tuple2[string, map[string]string], error)) {
	f("text/plain")
}

func main() {
	useFn(func(arg0 string) (lisette.Tuple2[string, map[string]string], error) {
		ret, ret_1, ret_2 := mime.ParseMediaType(arg0)
		tup := lisette.MakeTuple2(ret, ret_1)
		return tup, ret_2
	})
}
