tests/spec/emit/snapshots/go_type_uses_declared_package_name_not_path_segment.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:example.com/ultraviolet"
  
  fn handle(_msg: uv.Event) {
  }
---
package main

import uv "example.com/ultraviolet"

func handle(_ uv.Event) {}
