tests/spec/emit/snapshots/go_variadic_fn_value_wrapper_spreads_args.snap
---
source: tests/spec/emit/functions.rs
description: "input: \nimport fmt \"go:fmt\"\nimport os \"go:os\"\n\nfn main() {\n  let f = fmt.Fprintf\n  let _ = f(os.Stdout, \"hi %d\", 3)\n}\n"
---
package main

import (
	"fmt"
	"os"
)

func main() {
	fmt.Fprintf(os.Stdout, "hi %d", 3)
}
