tests/spec/emit/snapshots/gopkg_in_dotted_version_path_resolves_module.snap
---
source: tests/spec/emit/imports.rs
description: "input: \nimport \"go:gopkg.in/yaml.v3\"\n\nfn test() {\n  let _ = yaml.Decoder{}\n}\n"
---
package main

import yaml "gopkg.in/yaml.v3"

func test() {
	_ = yaml.Decoder{}
}
