tests/spec/emit/snapshots/gopkg_in_dotted_version_path_resolves_package.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:gopkg.in/yaml.v3"
  
  fn test() {
    let _ = yaml.Decoder{}
  }
---
package main

import yaml "gopkg.in/yaml.v3"

func test() {
	_ = yaml.Decoder{}
}
