tests/spec/emit/snapshots/gopkg_in_instance_method_emits_correct_qualifier.snap
---
source: tests/spec/emit/imports.rs
description: "input: \nimport \"go:gopkg.in/yaml.v3\"\n\nfn test() {\n  let mut d = yaml.Decoder{}\n  d.KnownFields(true)\n}\n"
---
package main

import yaml "gopkg.in/yaml.v3"

func test() {
	d := yaml.Decoder{}
	d.KnownFields(true)
}
