tests/spec/emit/snapshots/gopkg_in_package_const_access_emits_correct_qualifier.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:gopkg.in/yaml.v3"
  
  fn test() {
    let _ = yaml.ScalarNode
  }
---
package main

import yaml "gopkg.in/yaml.v3"

func test() {
	_ = yaml.ScalarNode
}
